@@ -1,6 +1,7 @@
 1.1.6
   * (cql3) fix potential NPE with both equal and unequal restriction (CASSANDRA-4532)
   * (cql3) improves ORDER BY validation (CASSANDRA-4624)
+  * Fix potential deadlock during counter writes (CASSANDRA-4578)
 
 
 1.1.5
